# jk_not_file

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swkhackl/jk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: encrypt.dex
app/src/main/cpp/: CMakeLists.txt  JAsset.cpp  JAsset.h  JniInfo.cpp  JniInfo.h  ProxyApplication.cpp  ProxyApplication.h  main.cpp
app/src/main/cpp/AndroidDef/: AndroidDef.h  BaseDef.cpp  BaseDef.h  CMakeLists.txt  MinAndroidDef.h
app/src/main/cpp/AndroidDef/libdex/: DexDataMap.cpp  DexFile.cpp  DexFile.h  Leb128.h  ZipArchive.cpp  ZipArchive.h
app/src/main/cpp/AndroidDef/vm/: Common.h  Dalvik.h  DvmDex.h  Hash.cpp  Hash.h  JniInternal.h  Thread.cpp  Thread.h
app/src/main/cpp/DexLoader/: CMakeLists.txt  DexRestore.cpp  DexRestore.h  DvmLoader.cpp  DvmLoader.h
app/src/main/java/com/swkhackl/jk/: FileManager.java  Global.java  JavaRef.java  ProxyApplication.java  ShellInfo.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/swkhackl/jk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
